<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_path_planning_ros</name>
    <version>0.1.0</version>
    <description>erl_path_planning_ros is a ROS package of erl_path_planning.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_path_planning_ros.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
    <buildtool_depend>erl_cmake_tools</buildtool_depend>    <!-- required -->

    <!-- ROS1 dependencies -->
    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 1">rosgraph_msgs</depend>
    <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
    <depend condition="$ROS_VERSION == 1">sensor_msgs</depend>
    <depend condition="$ROS_VERSION == 1">nav_msgs</depend>
    <depend condition="$ROS_VERSION == 1">std_srvs</depend>
    <depend condition="$ROS_VERSION == 1">tf2_ros</depend>

    <!-- ROS2 dependencies -->
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>
    <depend condition="$ROS_VERSION == 2">rclpy</depend>
    <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
    <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
    <depend condition="$ROS_VERSION == 2">nav_msgs</depend>
    <depend condition="$ROS_VERSION == 2">std_srvs</depend>
    <depend condition="$ROS_VERSION == 2">tf2_ros</depend>

    <depend>erl_path_planning</depend>
    <depend>erl_env</depend>
    <depend>erl_geometry_msgs</depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
