[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
pybind_module_name = None
erl_dependencies = ["erl_common", "erl_env", "erl_geometry", "erl_path_planning"]
build_type = "Release"

[project]
name = "erl_path_planning_ros"
version = "0.1.0"
description = "Python package for erl_path_planning_ros"
authors = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
maintainers = [
    { name = "Zhirui Dai", email = "zhdai@ucsd.edu" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
test_astar_2d_node = "erl_path_planning_ros.test.test_astar_2d_node:main"
test_astar_2d_ltl_node = "erl_path_planning_ros.test.test_astar_2d_ltl_node:main"
