[develop]
script_dir=$base/lib/erl_path_planning_ros
[install]
install_scripts=$base/lib/erl_path_planning_ros
[options.entry_points]
console_scripts =
    test_astar_2d_node = erl_path_planning_ros.test.test_astar_2d_node:main
    test_astar_2d_ltl_node = erl_path_planning_ros.test.test_astar_2d_ltl_node:main
